GNOME Bugzilla – Bug 685618
user-accounts: Recognize that some kerberos domains cannot be joined
Last modified: 2012-10-15 12:10:56 UTC
Fix the problem of crashing/precondition failure when user types a domain like redhat.com or nullroute.eu.org where there is a kerberos server but we cannot join to it (because it's not AD or IPA). The first patch contains a new string, and is for gnome-control-conter 3.7.x
Created attachment 225942 [details] [review] user-accounts: Recognize that some kerberos domains cannot be joined realmd supports discovering generic kerberos domains, which cannot be joined. Add a usable error message in gnome-control-center in this case.
Created attachment 225943 [details] [review] gnome-3-6 patch: user-accounts: Recognize that some kerberos domains cannot be joined Patch for gnome-3-6 branch without adding another string.
Looks good to me - do we need to bump the required realmd version for this ?
Review of attachment 225943 [details] [review]: You're not actually adding a usable error message for gnome-3-6 though, are you?
(In reply to comment #4) > Review of attachment 225943 [details] [review]: > > You're not actually adding a usable error message for gnome-3-6 though, are > you? No. The usable error message is for master.
(In reply to comment #5) > (In reply to comment #4) > > Review of attachment 225943 [details] [review] [details]: > > > > You're not actually adding a usable error message for gnome-3-6 though, are > > you? > > No. The usable error message is for master. Might want to reflect that in the commit message then.
Attachment 225942 [details] pushed as 074a495 - user-accounts: Recognize that some kerberos domains cannot be joined