user-accounts: Recognize that some kerberos domains cannot be joined

realmd supports discovering generic kerberos domains, which cannot
be joined. Add a usable error message in gnome-control-center in
this case.

https://bugzilla.gnome.org/show_bug.cgi?id=685618